// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering works 1`] = `
<span
  data-emojikind="horse"
  data-type="emoji"
  draggable="true"
>
  🐴
</span>
`;

exports[`Unknown emoji puts question mark 1`] = `
<span
  data-emojikind="unknown_emoji"
  data-type="emoji"
  draggable="true"
>
  ❓
</span>
`;
